--- a/ReadMe.html
+++ b/ReadMe.html
@@ -104,11 +104,13 @@
 
 <p>WildOS requires version 0.9.2 or later of node-webkit.</p>
 
-<p>On Mac OS X, node-webkit is an application and should be copied to the standard <code>Applications</code> folder.</p>
-
 <p>On Linux, node-webkit is an executable called <code>nw</code> and should be accessible in the <code>PATH</code>.
 The simplest way to install is to copy <code>nw</code> to <code>/usr/local/bin</code> or to create a symbolic link.
 To install in <code>/opt</code> and support mulitple versions, follow the instructions in <a href="http://www.exponential.io/blog/install-node-webkit-on-ubuntu-linux">this web page</a>.</p>
+
+<p>On Mac OS X, node-webkit is an application and should be copied to the standard <code>Applications</code> folder.
+If it is installed elsewhere, edit the <code>tools/nw</code> script so that <code>NWAPP</code> points to it.
+This <code>nw</code> script is designed to be used on the command line in the same way as on Linux.</p>
 
 <h3 id="installingthewildosserver">Installing the WildOS server</h3>
 
@@ -119,6 +121,13 @@ To install in <code>/opt</code> and support mulitple versions, follow the instru
 </code></pre>
 
 <p>This will create a <code>node_modules</code> directory in the <code>WildOS/server</code> directory and install the node modules needed by WildOS there. (Make sure you are in the <code>server</code> directory).</p>
+
+<p>It is a good idea to add the <code>WildOS/tools/</code> directory to your PATH so that commands such as <code>wildos</code>, <code>walldo</code> and (on Mac OS X), <code>nw</code>, are directly accessible from the command line.
+The rest of this documentation assumes this has been done:</p>
+
+<pre><code>% cd WildOS/tools
+% PATH=`pwd`:$PATH
+</code></pre>
 
 <h3 id="configuringtheinstallation">Configuring the installation</h3>
 
@@ -178,8 +187,11 @@ Each object has a mandatory property: <code>type</code>. The root object must be
 <li>The <code>bezelSize</code> property defines the number of pixels &#8220;hidden&#8221; behind the bezels. If you specify 0, the bezels will be ignored;</li>
 <li>The <code>numTiles</code> property defines the number of rows and columns of the tiled display (we assume a rectangular layout);</li>
 <li>The <code>tiles</code> property defines which machine runs which tile (see below);</li>
-<li>The <code>renderer</code> property can be set to <code>perTile</code> or <code>perHost</code>. The former means that one rendering client is launched for each tile, while the latter means that one rendering client is launched for each host (if the host runs multiple tiles, the client will create one window per tile). Currently, we use mostly <code>perTile</code></li>
-<li>The <code>restart</code> property is the shell command for restarting all the clients.</li>
+<li>The <code>renderer</code> property can be set to <code>perTile</code> or <code>perHost</code>. The former means that one rendering client is launched for each tile, while the latter means that one rendering client is launched for each host (if the host runs multiple tiles, the client will create one window per tile). Currently, we use mostly <code>perTile</code> (in fact, <code>perHost</code> has not been tested recently);</li>
+<li>The <code>domain</code> property is optional, it is the domain name to add to the host names listed in the <code>tiles</code> array;</li>
+<li>The <code>env</code> property is optional. It lists per-instance values that can be used in the <code>start</code>, <code>stop</code> and <code>restart</code> properties below. If defined, it must be an object whose properties are the instance names and the values are a string;</li>
+<li>The <code>start</code> and <code>stop</code> properties are the shell commands to start / kill all the clients. Before execution, the following string substitutions take place: %HOST% is replaced by the client host name, %PORT% is replaced by the port number of the server, %INSTANCE% is replaced by the instance name to run on the client, and %ENV% is replaced by the content of the <code>env</code> property for the instance. Also process environment variables, e.g. <code>$PATH</code>, are replaced by their value. The % and $ signs can be protected by a backslash (which is specified as two backslashes in a JSON file);</li>
+<li>The optional <code>restart</code> property is a shell command to kill then start all the clients. If absent, it is replaced by calling <code>stop</code> then <code>start</code>.</li>
 </ul>
 
 <p>The <code>tiles</code> property of the wall is a two-dimensional array (an array of lines, each line being an array of tiles). Each element of this two-dimensional array represents a tile and is itself an array with two elements:</p>
@@ -246,26 +258,14 @@ WildOS consists of multiple processes: a server and a set of clients. The order 
 
 <h3 id="runningtheserver">Running the server</h3>
 
-<p>You run the WildOS server on the main computer. The server is a node-webkit application, however it is not packaged as a standalone application so you need to run it from the command line. Node-webkit is slightly different on Mac OS X and Linux so the command to run it is a bit different:</p>
+<p>You run the WildOS server on the main computer. </p>
 
-<ul>
-<li>On Mac OS X, we assume that node-webkit is in <code>/Applications</code>. If not, edit the <code>tools/nw</code> so that <code>NWAPP</code> points to it.</li>
-<li>On Linux, node-webkit is expected to be in the PATH (typically in <code>/usr/local/bin</code>).</li>
-</ul>
-
-<p>Also, remember that the name of the platform must be set in the <code>WALL</code> environment variable.
+<p>Also, remember that the name of the platform must be set in the <code>WALL</code> environment variable for <code>walldo</code> to work.
 In order to test on a single machine, you can set <code>WALL</code> to <code>local</code> and run the server and clients on the same machine.</p>
 
-<p>To run the server on Mac OS X:</p>
+<p>To run the server (assuming the <code>tools/</code> directory is in the PATH):</p>
 
-<pre><code>% cd WildOS/server  
-% ../tools/nw   
-</code></pre>
-
-<p>To run the server on Linux:</p>
-
-<pre><code>% cd WildOS/server  
-% nw .  
+<pre><code>% wildos 
 </code></pre>
 
 <p>This should open a window with lots of traces, and another window depicting the wall display with the buttons <code>Restart</code> and <code>Shutdown</code> at the top.
@@ -278,8 +278,7 @@ The <code>Applications</code> menu lists the available applications. In order to
 
 <p>You can start the server with an initial set of running applications simply by adding them to the command line:</p>
 
-<pre><code>(macos)% ../tools/nw Browser  
-(linux)% nw . Browser  
+<pre><code>% wildos Browser  
 </code></pre>
 
 <p>Note that you can pass the following command line arguments (before the application names):</p>
@@ -289,20 +288,16 @@ The <code>Applications</code> menu lists the available applications. In order to
 <li><code>-p &lt;port&gt;</code> or <code>--p &lt;port&gt;</code> to specify the port number the server listens to (overrides the <code>serverPort</code> property in the platform configuration file).</li>
 </ul>
 
+<p>For example :</p>
+
+<pre><code>% wildos -w local -p 8088 Browser
+</code></pre>
+
+<p>On Mac OS X, you can pass <code>-X</code> as first argument to <code>nw</code> to run node-webkit as a Unix command instead of a Mac OS application. This can help in case of crashes at startup as it displays the error messages on standard output.</p>
+
 <h3 id="runningtherenderingclients">Running the rendering clients</h3>
 
-<p>To run the rendering clients, simply click the <code>Restart</code> button in the main window. or select <code>Restart</code> in the <code>Platform</code> menu.
-Alternatively, you can run the following command in a terminal window unless you are running the clients locally:</p>
-
-<pre><code>% walldo WildOS/renderer/restart -p &lt;portnumber&gt; 
-</code></pre>
-
-<p>If you are running clients locally, the command instead is (assuming you are in the WildOS directory):</p>
-
-<pre><code>% renderer/restart --local -p &lt;portnumber&gt; 
-</code></pre>
-
-<p>In both cases, <code>&lt;portnumber&gt;</code> is the portnumber specified in the platform configuration file or on the command line when you ran the server. The <code>-p &lt;portnumber&gt;</code> argument can be omitted if the port number is 8080.</p>
+<p>To run the rendering clients, simply click the <code>Restart</code> button in the main window or select <code>Restart</code> in the <code>Platform</code> menu.</p>
 
 <p>This command will kill any existing clients and then start them again. Each client machine should first show a window with lots of traces and then, as soon as it has managed to connect to the server, it should display a full-screen blank window with the same web page as the one you loaded on the server. (If you are running clients locally, it will create four small windows mimicking a small tiled display instead of running full screen).</p>
 
@@ -342,17 +337,15 @@ Alternatively, you can run the following command in a terminal window unless you
 
 <h3 id="shuttingdown">Shutting down</h3>
 
-<p>Click the <code>Shutdown</code> button or select the <code>Shutdown</code> command in the <code>Platform</code> menu to stop the rendering clients. Note that this will only work if they are still responding. If they are not, you will have to kill them &#8220;by hand&#8221; with the following command:</p>
+<p>Click the <code>Shutdown</code> button or select the <code>Shutdown</code> command in the <code>Platform</code> menu to stop the rendering clients. Note that this will only work if they are still responding. If they are not, try the <code>Stop</code> command in the <code>Platform</code> menu, or kill them &#8220;by hand&#8221; with the following command:</p>
 
-<pre><code>% tools/walldo killall nw
+<pre><code>% wildos stop
 </code></pre>
 
 <p>(If you are running local clients, you can kill them in the usual way, e.g. by selecting their <code>Quit</code> command).</p>
 
 <p>To quit the server, select the <code>Quit</code> command in its menu or use the usual quit keyboard shortcut (command-Q on Mac OS X).
 Note that this does <strong>not</strong>* kill the clients (mostly so that you can test if they reconnect correctly when restarting the server).</p>
-
-<p>Note that the <code>Start</code> and <code>Stop</code> commands in the <code>Platform</code> menu are currently inactive.</p>
 
 <h2 id="theapplications">The applications</h2>
 
