Added a controller window for the SlideShow application, and refined the web controller.

--- a/server/apps/Cursors/content/controller.html
+++ b/server/apps/Cursors/content/controller.html
@@ -1,3 +1,6 @@
+<h3 class="controller-title">I am the Cursors controller</h3>
+<div class="controller-body">
+
 <style type="text/css">
 		.cursorSwatch {
 			margin: 5px;
@@ -11,8 +14,6 @@
 			background-color: darkgrey;
 		}
 </style>
-
-<h3>I am the Cursors controller</h3>
 
 <input id="newCursor" type="button" value="New Cursor"/>
 <span id="cursors"></span>
@@ -274,3 +275,4 @@
 		draggedBy: function(target, dx, dy) { if (target) target.moveSelectedBy(dx, dy); },
 	}).start();
 </script>
+</div>
