--- a/server/apps/Browser/content/controller.html
+++ b/server/apps/Browser/content/controller.html
@@ -1,4 +1,5 @@
-<h3>I am the Browser controller</h3>
+<h3 class="controller-title">I am the Browser controller</h3>
+<div class="controller-body">
 
 <p id="browser"></p>
 <input id="browserURL" size="60" type="text"/><input id="browserSetURL" type="button" value="Set URL"/>
@@ -37,3 +38,4 @@
 	$('#browserSetURL').click(function() { browser.setBackgroundURL($('#browserURL').val()); });
 
 </script>
+</div>
