Added config properties start/stop/restartDelay to straddle commands run on the cluster. Added right-click on tiles in platform UI to start/top individual tile.

--- a/server/content/platform.html
+++ b/server/content/platform.html
@@ -80,6 +80,7 @@
 	<div id="top">
 		<button onclick='platform.restart()'>Restart</button>
 		<button onclick='platform.shutdown()'>Shutdown</button>
+		<span style="color:grey">(Right click tile to start/stop individual clients)</span>
 	</div>
 	<div id="platform">
 	</div>
