--- a/server/content/server.html
+++ b/server/content/server.html
@@ -6,11 +6,40 @@ body { background-color: #def; }
 p { margin: 5px; padding: 0;}
 
 #log .Indent { border: solid 1px black; margin-left: 10px; margin-right: 1px; }
+#log .show   { background-color: #def; }
 #log .closed { background-color: lightgrey; height: 1.5em; overflow: hidden; }
-#log p.Info { color: #111; }
+#log .error  { border: solid 1px red; }
+#log p.Info  { color: #111; }
 #log p.Warning { color: orange; }
 #log p.Error { color: red; }
 #log p.Fatal { color: brown; }
+
+#log .Platform.closed, 
+#log .Device.closed
+	{ background-color: #F5E096}
+#log .Platform.show, 
+#log .Device.show
+	{ background-color: #F3E8C4}
+
+#log .Surface.closed, 
+#log .Tile.closed
+	{ background-color: #F5CB9A}
+#log .Surface.show, 
+#log .Tile.show
+	{ background-color: #F3DFC8}
+
+#log .App.closed, 
+#log .Browser.closed, 
+#log .Cursors.closed, 
+#log .SlideShow.closed
+	{ background-color: #A9DAF5}
+#log .App.show, 
+#log .Browser.show, 
+#log .Cursors.show, 
+#log .SlideShow.show
+	{ background-color: #D7E9F3}
+
+
 </style>
 <script src="jquery-mbl-1.8.3.min.js"></script>
 <script type="text/javascript">
@@ -40,7 +69,30 @@ p { margin: 5px; padding: 0;}
 					.replace(/ /g, '&nbsp;')
 					.replace(/\\n/g, '<br/>') + '&nbsp;';
 		}
+
 		$('#'+logStatus.id).append('<p class="'+status.level+'">'+html+'</p>');
+
+		// Add classes to enclosing scope
+		if (status.domain)
+			$('#'+logStatus.id).addClass(status.domain);
+
+		// Add display status as class, unless status is closed but an error was reported
+		if (status.display !== 'closed' || ! $('#'+logStatus.id).hasClass('error'))
+			$('#'+logStatus.id).addClass(status.display);
+
+		// Open parent scopes if an error occurs
+		if (status.level != "Info") {
+			$('#'+logStatus.id)
+				.addClass('error')
+				.removeClass('closed')
+				.addClass('show')
+				.parentsUntil('#log')
+					.addClass('error')
+					.removeClass('closed')
+					.addClass('show')
+			;
+		}
+
 		$(window).scrollTop(document.body.scrollHeight);
 	};
 
@@ -77,6 +129,7 @@ p { margin: 5px; padding: 0;}
 		// Collapse/Expand log by clicking
 		$('#log').on("click", ".Indent", function(e) {
 			$(this).toggleClass('closed');
+			$(this).toggleClass('show');
 
 			// Close only the innermost div
 			e.stopPropagation();
@@ -89,7 +142,7 @@ p { margin: 5px; padding: 0;}
 <body>
 <h1>Server</h1>
 <!--<button onclick="newWindow()">New window</button>-->
-<div id="log"><p id="log_inner">log: </p></div>
+<div id="log"></div>
 <button onclick='clearLog();'>Clear log</button>
 </body>
 </html>
