--- a/server/apps/Cursors/content/controller.html
+++ b/server/apps/Cursors/content/controller.html
@@ -1,4 +1,5 @@
-<h3 class="controller-title">I am the Cursors controller</h3>
+<!-- Web controller for the Cursors app -->
+<h3 class="controller-title">Cursors</h3>
 <div class="controller-body">
 
 <style type="text/css">
@@ -21,6 +22,8 @@
 <div id="cursorTouchpad"></div>
 
 <script>
+// Wrap in a function to protect global name space
+(function() {
 	var Cursor = OO.newClass().name('Cursor')
 		.fields({
 			id: null,
@@ -274,5 +277,8 @@
 		dragTarget: cursors,
 		draggedBy: function(target, dx, dy) { if (target) target.moveSelectedBy(dx, dy); },
 	}).start();
+
+// Invoke the main function
+}) ();
 </script>
 </div>
