--- a/server/apps/SlideShow/content/serverBrowser.html
+++ b/server/apps/SlideShow/content/serverBrowser.html
@@ -68,6 +68,27 @@
         background-color: #444;
         right: 20px;
     }
+
+    /* error panel */
+    #errorPanel {
+        display: none;
+        position: absolute;
+        background-color: #444;
+        padding: 20px;
+        top: 100px;
+        left: 200px;
+        width: 600px;
+        height: 300px;
+    }
+    #errorPanel h4 {
+        margin-top: 0;
+    }
+    #closeError {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+    }
+
     </style>
 
     <script type="text/javascript">
@@ -116,6 +137,12 @@
 <div>Previous slide: <button onclick="app.prevSlide()">&larr;</button></div>
 <div>Gallery: <button onclick="$('.slide.current').click()">&#x21a9;</button> or click selected slide or "Gallery" menu</div>
 <div>Load slideshow: use menu or drag file/folder to window</div>
+</div>
+
+<div id="errorPanel">
+<h4>Errors while loading slides:</h4>
+<p><ul id="errors"></ul></p>
+<button id="closeError">OK</button>
 </div>
 
 <h2 id="title"></h2>
@@ -193,29 +220,54 @@
     // (because the option toggleControlsOnReturn only affects what happens with the Return key)
     blueimp.Gallery.prototype.toggleControls = function() {};
 
+    // Display a panel with error messages
+    function showErrors(errors) {
+        if (! errors || errors.length == 0) {
+            hideErrors();
+            return;
+        }
+
+        var html = '';
+        errors.forEach(function(error) {
+            html += '<li>'+error+'</li>';
+        });
+
+        $('#errors').html(html);
+        $('#errorPanel').show(200);
+    };
+    function hideErrors() {
+        $('#errorPanel').hide(200);
+    }
+    $('#closeError').click(hideErrors);
+
     // File dialog to open a slideshow
     $('#fileDialog').change(function(event) {
-        app.loadSlideShow($(this).val());
+        var slideshow = $(this).val();
+        if (!slideshow || app.loadSlideShow(slideshow))
+            hideErrors();
+        else
+            showErrors(['Could not load '+(slideshow || 'slide show')]);
     });
     function openSlideshow() {
         var chooser = $('#fileDialog');
-        chooser.attr('nwworkingdir', app.slideshowDir);
+        chooser.attr('nwworkingdir', app.slidePath());
         chooser.click();  
     }
 
     $('#folderDialog').change(function(event) {
-        app.loadFiles([$(this).val()]);
+        showErrors(app.loadFiles([$(this).val()]));
     });
     function openFolder() {
         var chooser = $('#folderDialog');
-        chooser.attr('nwworkingdir', app.slideshowDir);
+        chooser.attr('nwworkingdir', app.slidePath());
         chooser.click();  
     }
 
     // Open the slides folder in the Finder
     function showInFinder() {
+        hideErrors();
         var spawn = require('child_process').spawn;
-        spawn('open', ['../slides']);
+        spawn('open', [app.slidePath()]);
     }
 
     // Toggle gallery on/off
@@ -239,8 +291,8 @@
         var index = 0;
         var total = app.slides.length;
         app.slides.forEach(function(slideName) {
-            var thumb = 'slides/'+slideName+'/thumbs/thumb500.png';
-            var img = 'slides/'+slideName+'/thumbs/thumb1000.png';
+            var thumb = app.urlLocation(slideName)+'/thumbs/thumb500.png';
+            var img = app.urlLocation(slideName)+'/thumbs/thumb1000.png';
             slides.push(img);
             var title = 'slide '+(index+1)+'/'+total+' - '+slideName;
             $('#links').append('<a href="'+img+'" title="'+title+'" data-gallery>'+
@@ -305,7 +357,7 @@
             paths.push(files[i].path);
         }
 
-        app.loadFiles(paths);
+        showErrors(app.loadFiles(paths));
     });
 </script>
 
