Added --hostname option to renderer, to control the hostname sent back to the server. Updated pref panel to include debugging level 3. Updated documentation for the sever and renderer options.

--- a/server/content/preferences.html
+++ b/server/content/preferences.html
@@ -327,6 +327,7 @@
 	<div class="setting"><input type="radio" name="debug" value="0"/><label for="debug0">No debugging</label></div>
 	<div class="setting"><input type="radio" name="debug" value="1"/><label for="debug1">Record traces</label></div>
 	<div class="setting"><input type="radio" name="debug" value="2"/><label for="debug2">Show traces</label></div>
+	<div class="setting"><input type="radio" name="debug" value="3"/><label for="debug3">Redirect traces to console</label></div>
 	<div class="setting"><input id="logConfig" type="text" size="40"/>
 		<button id="selectLog">...</button>
 		<input style="display:none;" id="selectLogDialog" type="file" accept=".js,.json"/>
