Improved messages in controller when loosing connection

--- a/server/content/controller.html
+++ b/server/content/controller.html
@@ -368,6 +368,10 @@
 			disconnected: function() {
 				this._super();
 
+				this.deviceName = null;
+				setDeviceName(null);
+				msg('Lost connection');
+
 				App.unloadAllApps();
 			},
 		})
