Separated the node-webkit GUI from the rest of the server (module lib/gui.js loaded into platform.GUI) so that it is now possible to (1) run the server under node-webkit without UI (--no-GUI) and, (2) more interestingly, run the server with node Note however that in the latter case, preferences and application are not saved as they rely on the webkit localStorage.

--- a/server/content/platform.html
+++ b/server/content/platform.html
@@ -99,11 +99,11 @@
 </head>
 <body>
 	<div id="top">
-		<button onmousedown='rollDown(platform.menu, this, event)'>Platform</button>
-		<button onmousedown='rollDown(platform.apps.menu, this, event)'>Apps</button>
+		<button onmousedown='rollDown(platform.GUI.getPlatformMenu(), this, event)'>Platform</button>
+		<button onmousedown='rollDown(platform.GUI.getAppsMenu(platform.App), this, event)'>Apps</button>
 		<span style="color:grey">(Right click tiles for renderer menu)</span>
-		<button style="float: right" onclick='platform.showTraceWindow()'>Open log</button>
-		<button style="float: right" onclick='platform.showDevTools()'>Dev tools</button>
+		<button style="float: right" onclick='platform.GUI.showTraceWindow()'>Open log</button>
+		<button style="float: right" onclick='platform.GUI.showDevTools()'>Dev tools</button>
 	</div>
 	<div id="platform">
 	</div>
