--- a/server/apps/Browser/content/controller.html
+++ b/server/apps/Browser/content/controller.html
@@ -2,9 +2,52 @@
 <h3 class="controller-title">Browser</h3>
 <div class="controller-body">
 
+<style type="text/css">
+		#browserTouchpad {
+			min-width: 300px;
+			min-height: 150px;
+			width: 400px;
+			height: 200px;
+			margin-top: 6px;
+			padding-bottom: 6px;
+		}
+		.bottom:before {
+			content: " ";
+			display: inline-block;
+			height: 100%;
+			vertical-align: text-bottom;
+			width:6px;
+		}
+		.bottom {
+			display: inline-block;
+		}
+		.browserTouchpadTab {
+			padding: 6px 20px;
+			margin-right: 2px;
+		}
+		.browserZoom {
+			background-color: #7CD7CF;
+		}
+		.browserMove {
+			background-color: #E6D8CB;
+		}
+		.browserResize {
+			background-color: #FFE4B8;
+		}
+</style>
+
 <p id="browser"></p>
+<p>
 <input id="browserURL" size="60" type="text"/>
 <input id="browserSetURL" type="button" value="Set URL"/>
+</p>
+<span class="browserTouchpadTab browserZoom" id="browserZoom">Zoom</span>
+<span class="browserTouchpadTab browserMove" id="browserMove">Move</span>
+<span class="browserTouchpadTab browserResize" id="browserResize">Resize</span><br/>
+<div id="browserTouchpad" style="display: none">
+	<!--<div class="bottom_aligner"></div>-->
+	<div class="bottom">Use this trackpad as a joystick</div>
+</div>
 
 <script>
 // Wrap in a function to protect global name space
@@ -29,11 +72,12 @@
 
 			// These are remote called on the server, as specified by `shareState` below
 			setURL: function(url) {},
-			// panBy: function(dX, dY) {},
-			// zoomBy: function(dZ, x, y) {},
+			panBy: function(dX, dY) {},
+			zoomBy: function(dZ, x, y) {},
+			resizeBy: function(dW, dH) {},
 
 		})
-		.shareState('own', ['setURL', /* *** 'panBy', 'zoomBy' */])
+		.shareState('own', ['setURL', 'panBy', 'zoomBy', 'resizeBy'])
 	;
 
 	log.spyMethods(Browser);
@@ -42,6 +86,87 @@
 
 	$('#browserURL').keypress(function(ev) { if (ev.which == 13) $('#browserSetURL').click(); });
 	$('#browserSetURL').click(function() { browser.setURL($('#browserURL').val()); });
+
+
+	var touchAction = null;
+	var touchX = 0;
+	var touchY = 0;
+	var deltaX = 0;
+	var deltaY = 0;
+	var touching = false;
+	var delay = 100;
+	var timer = null;
+
+	function startDrag(event) {
+		touchX = event.screenX;
+		touchY = event.screenY;
+		deltaX = 0;
+		deltaY = 0;
+		touching = true;
+
+		if (delay)
+			timer = window.setInterval(function() {
+				if (deltaX && deltaY && touching && touchAction)
+					touchAction(deltaX, deltaY);
+			}, delay);
+	}
+
+	function drag(event) {
+		if (! touching)
+			return;
+
+		deltaX = event.screenX - touchX;
+		deltaY = event.screenY - touchY;
+	}
+
+	function stopDrag(event) {
+		touching = false;
+		if (timer) {
+			window.clearInterval(timer);
+			timer = null;
+		}
+	}
+
+	$('#browserTouchpad').mousedown(startDrag);
+	$('#browserTouchpad').mousemove(drag);
+	$('html').mouseup(stopDrag);
+
+	function touchPadButton(tag, cb) {
+		if (touchAction === cb) {
+			// tapping active mode = hide touchpad
+			$('#browserTouchpad').removeClass().hide(500);
+			touchAction = null;
+			return;
+		}
+
+		// show touchpad
+		$('#browserTouchpad').removeClass().addClass(tag).show(500);
+		touchAction = cb;
+	}
+
+	function touchPadZoom (dX, dY) {
+		if (dY === 0)
+			return;
+
+		var dZ = 1.05;
+		if (dY > 0)
+			dZ = 1 / 1.05;
+
+		browser.zoomBy(dZ, 0, 0);
+	}
+
+	function touchPadMove (dX, dY) {
+		browser.panBy(dX, dY);
+	}
+
+	function touchPadResize (dX, dY) {
+		browser.resizeBy(dX, dY);
+	}
+
+	$('#browserZoom').click(function() { touchPadButton('browserZoom', touchPadZoom); });
+	$('#browserMove').click(function() { touchPadButton('browserMove', touchPadMove); });
+	$('#browserResize').click(function() { touchPadButton('browserResize', touchPadResize); });
+
 
 // Invoke the main function
 }) ();
