Fixed Photoz app: moved content files to renderer and made the index file and photos folder configurable in configs/apps/Photoz.json

--- a/renderer/apps/Photoz/content/index.html
+++ b/renderer/apps/Photoz/content/index.html
@@ -4,17 +4,12 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="photoz.css">
-	<script src="/jquery-2.1.1.min.js"></script>
+	<script src="/content/jquery-2.1.1.min.js"></script>
 	<script src="quadtree.js"></script>
-	<script src="photos.js"></script><!-- this must be before photoz.js -->
 	<script src="photoz.js"></script>
 </head>
 <body>
 	<div id="start" class="flash">Animation started</div>
 	<div id="stop" class="flash">Animation stopped</div>
 </body>
-<script type="text/javascript">
-	makeQuadTree(2, displayWidth, displayHeight);	// # levels, width, height
-//	makeQuadTree(3, displayWidth, displayHeight);	// # levels, width, height
-</script>
 </html>
